fix: 全面修复JDK 8兼容性问题
主代码修复:
- ConfigController.java: Map.of()改为HashMap
- DefaultSchemaDiffer.java: 11处Map.of()改为createMap()辅助方法
- MySQLAdapter.java: stream.toList()改为collect(Collectors.toList())
- DatabaseAdapterFactory.java: List.copyOf()改为new ArrayList<>()
- DDLGeneratorService.java: readAllBytes()改为ByteArrayOutputStream

测试代码修复:
- DefaultSchemaDifferTest.java: 14处orElseThrow()添加异常supplier
- SchemaFlattenerTest.java: stream.toList()改为collect()

验证结果:
- 主代码编译通过
- 测试代码编译通过
- 13个单元测试全部通过
- JDK 1.8.0_121环境运行正常